--- a/cardapio.html
+++ b/cardapio.html
@@ -19,10 +19,8 @@
         </button>
 
         <button id="btn-logo" class="btn-logo">
-            <img class="logo-img" alt="Logo Lumière Café" src="https://c.animaapp.com/sqnQevmt/img/group@4x.png" />
+            <img class="logo-img" alt="Logo Lumière Café" src="/imagens/logo.png" />
         </button>
-        
-        <img class="icon-carrinho" alt="Carrinho" src="https://c.animaapp.com/sqnQevmt/img/icons8-carrinho-32-1@2x.png" />
 
         <button class="btn-category" data-category="bolos" id="category-bolos">
             Bolos →
