--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- Ícones do cabeçalho -->
           <a href="login.html"><img class="usurio" src="https://c.animaapp.com/4vJNjV8I/img/icons8-usu-rio-32-1@2x.png" alt="Usuário" /></a>
           <a href="#"><img class="carrinho" src="https://c.animaapp.com/4vJNjV8I/img/icons8-carrinho-32-1@2x.png" alt="Carrinho" /></a>
-          <a href="#"><img class="claquete" src="https://c.animaapp.com/4vJNjV8I/img/icons8-claquete-50-1@2x.png" alt="Claquete" /></a>
+          <a href="reserva.html"><img class="claquete" src="https://c.animaapp.com/4vJNjV8I/img/icons8-claquete-50-1@2x.png" alt="Claquete" /></a>
         
         </header>
 
